# glviz

./: CMakeLists.txt  README.md  main.cpp
shaders/: simple.frag  simple.vert  text.frag  text.vert  xyz.frag  xyz.vert
src/: Camera.cpp  Camera.h  Drawable.h  Font.cpp  Font.h  Freetype.cpp  Freetype.h  Mouse.cpp  Mouse.h  Obj.cpp  Obj.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Text.h  Xyz.cpp  Xyz.h  gl.h  glm.h  main.cpp  obj.cpp  obj.h  shader.cpp  shader.h  tiny_obj_loader.h
win64/cmake/: FindGLM.cmake  Findglfw3.cmake
